add transport to handler bids
