# internal/handlers/types/transport/transport.go
@@ -1,0 +1,284 @@
+// Package transport provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
+package transport
+
+// Defines values for BidStatus.
+const (
+	BidStatusAPPROVED  BidStatus = "APPROVED"
+	BidStatusCANCELED  BidStatus = "CANCELED"
+	BidStatusCREATED   BidStatus = "CREATED"
+	BidStatusPUBLISHED BidStatus = "PUBLISHED"
+)
+
+// Defines values for BidCreateRequestStatus.
+const (
+	BidCreateRequestStatusCLOSED    BidCreateRequestStatus = "CLOSED"
+	BidCreateRequestStatusCREATED   BidCreateRequestStatus = "CREATED"
+	BidCreateRequestStatusPUBLISHED BidCreateRequestStatus = "PUBLISHED"
+)
+
+// Defines values for BidEditRequestStatus.
+const (
+	BidEditRequestStatusCLOSED    BidEditRequestStatus = "CLOSED"
+	BidEditRequestStatusCREATED   BidEditRequestStatus = "CREATED"
+	BidEditRequestStatusPUBLISHED BidEditRequestStatus = "PUBLISHED"
+)
+
+// Defines values for TenderStatus.
+const (
+	TenderStatusCLOSED    TenderStatus = "CLOSED"
+	TenderStatusCREATED   TenderStatus = "CREATED"
+	TenderStatusPUBLISHED TenderStatus = "PUBLISHED"
+)
+
+// Defines values for TenderCreateRequestStatus.
+const (
+	TenderCreateRequestStatusCLOSED    TenderCreateRequestStatus = "CLOSED"
+	TenderCreateRequestStatusCREATED   TenderCreateRequestStatus = "CREATED"
+	TenderCreateRequestStatusPUBLISHED TenderCreateRequestStatus = "PUBLISHED"
+)
+
+// Defines values for PutStatusBidParamsStatus.
+const (
+	PutStatusBidParamsStatusAPPROVED  PutStatusBidParamsStatus = "APPROVED"
+	PutStatusBidParamsStatusCANCELED  PutStatusBidParamsStatus = "CANCELED"
+	PutStatusBidParamsStatusCREATED   PutStatusBidParamsStatus = "CREATED"
+	PutStatusBidParamsStatusPUBLISHED PutStatusBidParamsStatus = "PUBLISHED"
+)
+
+// Defines values for SubmitDecisionBidParamsDecision.
+const (
+	APPROVED SubmitDecisionBidParamsDecision = "APPROVED"
+	REJECTED SubmitDecisionBidParamsDecision = "REJECTED"
+)
+
+// Defines values for PutStatusTenderParamsStatus.
+const (
+	CLOSED    PutStatusTenderParamsStatus = "CLOSED"
+	CREATED   PutStatusTenderParamsStatus = "CREATED"
+	PUBLISHED PutStatusTenderParamsStatus = "PUBLISHED"
+)
+
+// Bid defines model for Bid.
+type Bid struct {
+	Description string    `json:"description"`
+	Id          string    `json:"id"`
+	Name        string    `json:"name"`
+	Responsible string    `json:"responsible"`
+	Status      BidStatus `json:"status"`
+	TenderId    string    `json:"tenderId"`
+	Version     int       `json:"version"`
+}
+
+// BidStatus defines model for Bid.Status.
+type BidStatus string
+
+// BidCreateRequest defines model for BidCreateRequest.
+type BidCreateRequest struct {
+	CreatorUsername string                 `json:"creatorUsername"`
+	Description     string                 `json:"description"`
+	Name            string                 `json:"name"`
+	OrganizationId  string                 `json:"organizationId"`
+	Status          BidCreateRequestStatus `json:"status"`
+	TenderId        string                 `json:"tenderId"`
+}
+
+// BidCreateRequestStatus defines model for BidCreateRequest.Status.
+type BidCreateRequestStatus string
+
+// BidEditRequest defines model for BidEditRequest.
+type BidEditRequest struct {
+	Description string               `json:"description"`
+	Name        string               `json:"name"`
+	Status      BidEditRequestStatus `json:"status"`
+}
+
+// BidEditRequestStatus defines model for BidEditRequest.Status.
+type BidEditRequestStatus string
+
+// Feedback defines model for Feedback.
+type Feedback struct {
+	BidId       string `json:"bid_id"`
+	CreatedAt   string `json:"created_at"`
+	Description string `json:"description"`
+	Id          string `json:"id"`
+	Responsible string `json:"responsible"`
+}
+
+// FeedbackCreateRequest defines model for FeedbackCreateRequest.
+type FeedbackCreateRequest struct {
+	Description string `json:"description"`
+}
+
+// Tender defines model for Tender.
+type Tender struct {
+	Description string       `json:"description"`
+	Id          string       `json:"id"`
+	Name        string       `json:"name"`
+	Responsible string       `json:"responsible"`
+	ServiceType string       `json:"service_type"`
+	Status      TenderStatus `json:"status"`
+	Version     string       `json:"version"`
+}
+
+// TenderStatus defines model for Tender.Status.
+type TenderStatus string
+
+// TenderCreateRequest defines model for TenderCreateRequest.
+type TenderCreateRequest struct {
+	CreatorUsername string                    `json:"creatorUsername"`
+	Description     string                    `json:"description"`
+	Name            string                    `json:"name"`
+	OrganizationId  string                    `json:"organizationId"`
+	ServiceType     string                    `json:"serviceType"`
+	Status          TenderCreateRequestStatus `json:"status"`
+}
+
+// TenderCreateRequestStatus defines model for TenderCreateRequest.Status.
+type TenderCreateRequestStatus string
+
+// TenderEditRequest defines model for TenderEditRequest.
+type TenderEditRequest struct {
+	Description string `json:"description"`
+	Name        string `json:"name"`
+	ServiceType string `json:"service_type"`
+}
+
+// FetchListByUserParams defines parameters for FetchListByUser.
+type FetchListByUserParams struct {
+	// Username Имя ответственного за предложения
+	Username string `form:"username" json:"username"`
+}
+
+// EditBidParams defines parameters for EditBid.
+type EditBidParams struct {
+	// Username Имя ответственного за предложение
+	Username string `form:"username" json:"username"`
+}
+
+// FeedbackBidsParams defines parameters for FeedbackBids.
+type FeedbackBidsParams struct {
+	// Username Имя ответственного за организацию тендера к этому комментируемому предложению
+	Username string `form:"username" json:"username"`
+}
+
+// RollbackBidParams defines parameters for RollbackBid.
+type RollbackBidParams struct {
+	// Username Имя ответственного за предложение
+	Username string `form:"username" json:"username"`
+}
+
+// FetchBidStatusParams defines parameters for FetchBidStatus.
+type FetchBidStatusParams struct {
+	// Username Имя ответственного за предложение
+	Username string `form:"username" json:"username"`
+}
+
+// PutStatusBidParams defines parameters for PutStatusBid.
+type PutStatusBidParams struct {
+	// Username Имя ответственного за предложение
+	Username string `form:"username" json:"username"`
+
+	// Status Статус предложения
+	Status PutStatusBidParamsStatus `form:"status" json:"status"`
+}
+
+// PutStatusBidParamsStatus defines parameters for PutStatusBid.
+type PutStatusBidParamsStatus string
+
+// SubmitDecisionBidParams defines parameters for SubmitDecisionBid.
+type SubmitDecisionBidParams struct {
+	// OrganizationId id организации ответственной за тендер
+	OrganizationId string `form:"organizationId" json:"organizationId"`
+
+	// Username Имя ответственного за организацию тендера
+	Username string `form:"username" json:"username"`
+
+	// Decision Решение по тендеру
+	Decision SubmitDecisionBidParamsDecision `form:"decision" json:"decision"`
+}
+
+// SubmitDecisionBidParamsDecision defines parameters for SubmitDecisionBid.
+type SubmitDecisionBidParamsDecision string
+
+// FetchListByTenderParams defines parameters for FetchListByTender.
+type FetchListByTenderParams struct {
+	// Username Имя ответственного за организацию тендера
+	Username string `form:"username" json:"username"`
+}
+
+// FetchReviewsParams defines parameters for FetchReviews.
+type FetchReviewsParams struct {
+	// Username Имя ответственного за организацию этого тендера
+	Username string `form:"username" json:"username"`
+
+	// OrganizationId id ответственной организации этого тендера
+	OrganizationId string `form:"organizationId" json:"organizationId"`
+
+	// AuthorUsername Автор, отзывы на предложения которого  нужно вывести
+	AuthorUsername string `form:"authorUsername" json:"authorUsername"`
+}
+
+// FetchListsTendersParams defines parameters for FetchListsTenders.
+type FetchListsTendersParams struct {
+	// Servicetype Категория тендера
+	Servicetype *string `form:"servicetype,omitempty" json:"servicetype,omitempty"`
+}
+
+// FetchListsTendersByUserParams defines parameters for FetchListsTendersByUser.
+type FetchListsTendersByUserParams struct {
+	// Username Имя ответственного
+	Username string `form:"username" json:"username"`
+}
+
+// FetchStatusTenderParams defines parameters for FetchStatusTender.
+type FetchStatusTenderParams struct {
+	// Username Имя ответственного организации этого тендера
+	Username string `form:"username" json:"username"`
+
+	// TenderId ID тендера
+	TenderId string `form:"tenderId" json:"tenderId"`
+}
+
+// PutStatusTenderParams defines parameters for PutStatusTender.
+type PutStatusTenderParams struct {
+	// TenderId id тендера
+	TenderId string `form:"tenderId" json:"tenderId"`
+
+	// Username Имя ответственного за тендер
+	Username string `form:"username" json:"username"`
+
+	// Status Статус предложения
+	Status PutStatusTenderParamsStatus `form:"status" json:"status"`
+}
+
+// PutStatusTenderParamsStatus defines parameters for PutStatusTender.
+type PutStatusTenderParamsStatus string
+
+// TenderEditParams defines parameters for TenderEdit.
+type TenderEditParams struct {
+	// Username Имя ответственного за тендер
+	Username string `form:"username" json:"username"`
+}
+
+// RollbackTenderParams defines parameters for RollbackTender.
+type RollbackTenderParams struct {
+	// Username Имя ответственного за тендер
+	Username string `form:"username" json:"username"`
+}
+
+// BidsCreateJSONRequestBody defines body for BidsCreate for application/json ContentType.
+type BidsCreateJSONRequestBody = BidCreateRequest
+
+// EditBidJSONRequestBody defines body for EditBid for application/json ContentType.
+type EditBidJSONRequestBody = BidEditRequest
+
+// FeedbackBidsJSONRequestBody defines body for FeedbackBids for application/json ContentType.
+type FeedbackBidsJSONRequestBody = FeedbackCreateRequest
+
+// TenderCreateJSONRequestBody defines body for TenderCreate for application/json ContentType.
+type TenderCreateJSONRequestBody = TenderCreateRequest
+
+// TenderEditJSONRequestBody defines body for TenderEdit for application/json ContentType.
+type TenderEditJSONRequestBody = TenderEditRequest
