# openapi.yaml
@@ -804,6 +804,10 @@ components:
           type: string
           format: string
           example: "550e8400-e29b-41d4-a716-446655440000"
+        organizationId:
+          type: string
+          format: string
+          example: "550e8400-e29b-41d4-a716-446655440000"
         status:
           type: string
           format: text
@@ -841,6 +845,13 @@ components:
     Feedback:
       type: object
       title: Отзыв на предложение
+      x-go-type-skip-optional-pointer: true
+      required:
+        - id
+        - bid_id
+        - description
+        - responsible
+        - created_at
       properties:
         id:
           type: string
@@ -865,6 +876,15 @@ components:
     Bid:
       type: object
       title: "Предложение"
+      x-go-type-skip-optional-pointer: true
+      required:
+        - id
+        - name
+        - description
+        - status
+        - tenderId
+        - version
+        - responsible
       properties:
         id:
           type: string
@@ -887,7 +907,7 @@ components:
           format: string
           example: "550e8400-e29b-41d4-a716-446655440000"
         version:
-          type: string
+          type: integer
           format: text
           example: 1
         responsible:
@@ -897,6 +917,15 @@ components:
     Tender:
       type: object
       title: "Тендер"
+      x-go-type-skip-optional-pointer: true
+      required:
+        - id
+        - name
+        - description
+        - service_type
+        - status
+        - version
+        - responsible
       properties:
         id:
           type: string
